fix line spacing for the menu dropdown

--- a/app/assets/stylesheets/_header.scss
+++ b/app/assets/stylesheets/_header.scss
@@ -99,6 +99,7 @@ header {
       visibility: hidden;
       width: 210px;
       z-index: 10;
+      line-height: normal;
 
       a {
         border: none;
